--- a/index.html
+++ b/index.html
@@ -38,11 +38,21 @@ button:active .button_top {
 
   transform: translateY(0);
 }
+#button:nth-of-type(2) {
+  position: absolute;
+  top: 20%;
+  left: 1%;
+}
+
 </style>
 <body>
     <button>
   <span class="button_top"> кнопка
   </span>
 </button>
+<button>
+    <span class="button_top"> кнопка2
+    </span>
+  </button>
 </body>
 </html>
