--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Хакери на мінімалках</title>
+    <title>Хакер на мінімалках</title>
 </head>
 <style>
     button {
@@ -47,11 +47,10 @@ button:active .button_top {
 </style>
 <body>
     <button>
-  <span class="button_top"> кнопка
-  </span>
+      <a href="html.html"??? class="button_top">html</a>
 </button>
 <button>
-    <span class="button_top"> кнопка2
+    <span class="button_top"> ???
     </span>
   </button>
 </body>
